# gearcalc

./: .env  .gitignore  Cargo.toml  Makefile  README.md  lib.rs
add/: Cargo.toml  lib.rs
codec/: Cargo.toml  lib.rs
div/: Cargo.toml  lib.rs
modulus/: Cargo.toml  lib.rs
mult/: Cargo.toml  lib.rs
neg/: Cargo.toml  build.rs  lib.rs
pow/: Cargo.toml  lib.rs
sub/: Cargo.toml  lib.rs
