[package]
name = "codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
gstd = { version = "1.4.1" }
gmeta = { version = "1.4.1" }

[build-dependencies]
gear-wasm-builder = { version = "1.4.1" }

[dev-dependencies]
gtest = { version = "1.4.1" }
